# SightPlusPlus-Server

./: .gitignore  README.md
Intel Sight ++/: Intel Sight ++.sln
Intel Sight ++/Intel Sight ++/: Intel Sight ++.cpp  Intel Sight ++.vcxproj  Intel Sight ++.vcxproj.filters  ml_controller.hpp  ml_impl_depth.cpp  ml_impl_rgb.cpp  ml_interface.hpp  output_interface_controller.cpp
Intel_SighPP_CMake/: CMakeLists.txt  CMakeSettings.json
Intel_SighPP_CMake/Intel_SighPP_CMake/: CMakeLists.txt  cv-helpers.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/: CMakeLists.txt  Intel_Sight_++.cpp  classification_result.hpp  service_controller.cpp  service_controller.hpp  setup_helper.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/interface_controller/: README.md  api_controller.cpp  api_controller.hpp  api_impl_websocket.cpp  api_user_interface.hpp  output_stream_controller.cpp  output_stream_controller.hpp  prioritiser_update_instructions.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/ml_lib/: README.md  caffe_impl.cpp  ml_controller.hpp  ml_impl_depth.cpp  ml_impl_rgb.cpp  ml_interface.hpp  model_creator.hpp  model_helper.hpp  object_tracking.cpp  object_tracking.hpp  yolo_impl.cpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/models/: no_bn.prototxt  no_bn.txt
Intel_SighPP_CMake/Intel_SighPP_CMake/src/priority_lib/: README.md  covid_priority.cpp  covid_priority.hpp  depth_priority.cpp  depth_priority.hpp  prioritiser.cpp  prioritiser.hpp  priority.hpp  priority_clock.cpp  priority_clock.hpp  priority_module.cpp  priority_module.hpp  size_priority.cpp  smart_priority.cpp  smart_priority.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/service_manager/: CameraInput.cpp
Intel_SighPP_CMake/Intel_SighPP_CMake/tests/: CMakeLists.txt  test.cpp  test_ml_controller.cpp
Sight_++_Solution/: Sight_++_Solution.sln
Sight_++_Solution/Intel_Sight_PP/: Intel_Sight_++.vcxproj  Intel_Sight_++.vcxproj.filters
Sight_++_Solution/Intel_Sight_PP/Debug/: vc142.idb
Sight_++_Solution/Intel_Sight_PP/Debug/Intel_Sight_PP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Intel_Sight_PP.lastbuildstate
Sight_++_Solution/Intel_Sight_PP/caffe/: CMakeLists.txt  Makefile  Makefile.config
Sight_++_Solution/Intel_Sight_PP/caffe/data/MyDataSet/: create_data.py  create_data.sh  create_list.sh  labelmap_voc.prototxt  main.sh  test.txt  test_name_size.txt  trainval.txt
Sight_++_Solution/Intel_Sight_PP/caffe/data/MyDataSet/Labels/: 001.xml  002.xml  003.xml
Sight_++_Solution/Intel_Sight_PP/caffe/examples/MobileNet-SSD/: demo.py  gen_model.sh  merge_bn.py  solver_test.prototxt  test_lmdb  train.sh  trainval_lmdb
Sight_++_Solution/Intel_Sight_PP/caffe/scripts/: create_annoset.py
Sight_++_Solution/Intel_Sight_PP/models/: SelfGuitar500.txt  no_bn-classnames.txt
Sight_++_Solution/Intel_Sight_PP/src/: CameraInput.h  Intel Sight ++.cpp  api_controller.cpp  api_controller.hpp  api_impl_websocket.cpp  api_user_interface.hpp  caffe_impl.cpp  classification_result.hpp  depth_priority.cpp  ml_controller.hpp  ml_impl_depth.cpp  ml_impl_rgb.cpp  ml_interface.hpp  object_tracking.cpp  object_tracking.hpp  output_interface_controller.cpp  output_stream_controller.cpp  prioritiser.cpp  prioritiser.h  prioritiser.hpp  priority_module.cpp  priority_module.hpp  service_controller.cpp  setup_helper.hpp  size_priority.cpp
(+14 files in other folders)
